--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mustache-express": "^1.3.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/mustache-express": "^1.2.5",
     "@types/node": "^22.13.5",
-    "@types/typescript": "^0.4.29"
+    "@types/typescript": "^0.4.29",
+    "mustache-express": "^1.3.2"
   }
 }
