--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
   "author": "",
   "type": "commonjs",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
-    "dev": "node --import=tsx --watch ./src/server.ts"
+    "dev": "node --import=tsx --watch ./src/server.ts",
+    "start": "node dist/server.js",
+    "tsc": "tsc",
+    "postinstall": "npm run tsc && copyfiles -u 1 src/**/*.mustache dist/"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
@@ -27,6 +33,7 @@
     "@types/mustache-express": "^1.2.5",
     "@types/node": "^22.13.5",
     "@types/typescript": "^0.4.29",
+    "copyfiles": "^2.4.1",
     "mustache-express": "^1.3.2"
   }
 }
